# ffmpeg_basic

./: README.md
Dependencies/x64/include/libavutil/: ffversion.h
Dependencies/x64/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
ffmpeg_basic_cmake/: CMakeLists.txt  main.cpp
